# HetKVCache

./: .gitignore  CMakeLists.txt  Data.md  LICENSE  PROGRESS.md  README.md  赛题.txt
benchmarks/: benchmark_main.cpp
docs/: HetKVCache_Architecture.md  创新点对比文档.md  大模型使用声明.md  开发迭代过程文档.md  方案设计文档.md  源码分析文档.md  评估效果文档.md
examples/: CMakeLists.txt
examples/basic_usage/: basic_example.cpp
examples/huggingface_integration/: hf_example.py
examples/vllm_integration/: vllm_example.py
include/hetkvcache/: config.h  hetkvcache.h  types.h
include/hetkvcache/allocator/: memory_mapper.h  paged_allocator.h
include/hetkvcache/device/: ascend_adapter.h  cuda_compat.h  device_interface.h
include/hetkvcache/migration/: migration_engine.h  prefetcher.h  transfer_scheduler.h
include/hetkvcache/monitor/: access_monitor.h  access_pattern_analyzer.h  heat_evaluator.h  lockfree_monitor.h
include/hetkvcache/utils/: logger.h  timer.h
plans/: ascend_adaptation_plan.md  execution_plan.md  performance_optimization_plan.md
results/: e2e_test_results.json
scripts/: e2e_llm_test.py  npu_compat.py  run_benchmark.sh
src/allocator/: memory_mapper.cpp  paged_allocator.cpp
src/core/: block_allocator.cpp  kv_cache_manager.cpp  memory_pool.cpp
src/cuda/: kernels.cu  memory_transfer.cu  stream_manager.cu
src/device/: device_factory.cpp
src/migration/: migration_engine.cpp  prefetcher.cpp  transfer_scheduler.cpp
src/monitor/: access_monitor.cpp  access_pattern_analyzer.cpp  heat_evaluator.cpp  lockfree_monitor.cpp
src/npu/: ascend_adapter.cpp
src/utils/: config.cpp  logger.cpp  timer.cpp
tests/: test_main.cpp
